--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,27 +1,3 @@
-server:
-  port: 8002
+config:
+  info: test-dev
 
-spring:
-  application:
-    name: cloud-payment-service
-  datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: 123456
-mybatis:
-  mapperLocations: classpath:/mapper/*.xml
-  type-aliases-package: com.eddy.springcloud.entity
-
-eureka:
-  client:
-    #是否将自己注册到eureka
-    fetch-registry: true
-    #是否从eureka抓取自己的注册信息，默认为true，单节点无所谓，集群必须配合ribbon实现负载均衡
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
-  instance:
-    instance-id: payment8002
-    prefer-ip-address: true
